--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "vitest": "^0.25.6"
   },
   "dependencies": {
+    "@rggt/nine-patch": "^0.0.0",
+    "lerna": "^6.3.0",
     "phaser": "^3.55.2"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
