--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@rggt/nine-patch": "^0.0.0",
+    "@rggt/gui-elements": "^0.0.0",
     "lerna": "^6.3.0",
     "phaser": "^3.55.2"
   },
