--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "vitest": "^0.25.6"
   },
   "dependencies": {
-    "@rggt/nine-patch": "^0.0.0",
+    "@rggt/gui-custom-elements": "^0.0.0",
     "@rggt/gui-elements": "^0.0.0",
+    "@rggt/nine-patch": "^0.0.0",
     "lerna": "^6.3.0",
     "phaser": "^3.55.2"
   },
