--- a/packages/gui-elements/package.json
+++ b/packages/gui-elements/package.json
@@ -5,14 +5,14 @@
   "author": "RGgt <rggt.inbox@gmail.com>",
   "homepage": "https://github.com/RGgt/story-play/tree/main/packages/gui-elements#readme",
   "license": "ISC",
-  "main": "lib/index.js",
+  "main": "src/index.ts",
   "typings": "src/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib",
+    "src",
     "src/index.d.ts"
   ],
   "publishConfig": {
