added lint command to all projects

--- a/packages/game-base/package.json
+++ b/packages/game-base/package.json
@@ -23,7 +23,8 @@
     "url": "git+https://github.com/RGgt/story-play.git"
   },
   "scripts": {
-    "test": "node ./__tests__/@rggt/game-base.test.js"
+    "test": "node ./__tests__/@rggt/game-base.test.js",
+    "lint": "eslint src"
   },
   "bugs": {
     "url": "https://github.com/RGgt/story-play/issues"
