--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "build:githubPages": "tsc && vite build --base=/story-play/ --outDir=./githubPages",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "lerna run lint"
   },
   "repository": {
     "type": "git",
