fix missing tsc

--- a/packages/game-base/package.json
+++ b/packages/game-base/package.json
@@ -23,6 +23,7 @@
     "url": "git+https://github.com/RGgt/story-play.git"
   },
   "scripts": {
+    "tsc": "tsc",
     "test": "node ./__tests__/@rggt/game-base.test.js",
     "lint": "eslint src"
   },
